# assignment1

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
ai/agent/: stock_agent.py
ai/tools/: calculator.py  stock_price.py  stock_tools.py
backend/: dependencies.py  main.py
backend/api/: chat.py  monitoring.py
frontend/: streamlit_app.py
src/agent/: __init__.py  container.py  graph.py  helper.py  nodes.py  prompt.py  service.py  tools.py
src/chatbot/: __init__.py  container.py  entities.py  service.py
src/llm/: __init__.py  domains.py  entities.py  service.py  settings.py
src/model/: __init__.py  container.py  domains.py  entities.py  model_execution_service.py  service.py  settings.py
src/model/executors/: __init__.py  langchain_tools.py
src/tools/: __init__.py  container.py  entities.py  service.py
src/utils/: __init__.py  exceptions.py
test/: test_stock_agent.py
tests/agent/: __init__.py  test_nodes.py  test_service.py
tests/model/: __init__.py  test_domains.py  test_model_execution_service.py  test_service.py
tests/tools/: __init__.py  test_service.py
webapp/: __init__.py  app.py  container.py  dependency.py  dtos.py  logger.py
webapp/middleware/: __init__.py  streaming.py
webapp/routers/: __init__.py  chat.py  health.py
